--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,4 +25,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "yarn"
       - run: yarn
-      - run: yarn start
+      - run: node src/index.js
