--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "celo-arb",
+  "name": "farm-registry-updater",
   "version": "1.0.0",
   "description": "Example usage",
   "main": "index.js",
@@ -11,18 +11,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "type": "git",
-    "url": "keybase://team/lisibs/celo-arb"
+    "type": "git"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@celo/contractkit": "^1.3.3",
     "dotenv": "^10.0.0",
     "ethers": "^5.5.1",
     "graphql": "^16.0.1",
     "graphql-request": "^3.6.1",
     "nodemon": "^2.0.15",
-    "savingscelo": "^3.3.0",
     "web3-utils": "^1.5.2"
   }
 }
